[package]
name = "crane"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url = "2"
tokio-stream = "0.1"
futures = "0.3.30"
hyper-tls = "0.6.0"
anyhow = "1.0.89"
tar = "0.4.42"
libflate = "2.1.0"
